Added peer to peer to the node

--- a/node/config.json
+++ b/node/config.json
@@ -1,7 +1,7 @@
 {
     "fields": {
         "block_dir": "blocks",
-        "default_port": "5012",
+        "default_port": "",
         "max_connections": 50,
         "privatekey_name": "privatekey",
         "publickey_name": "publickey",
