Add simple webserver so user will see something if the node IP is entered into a browser

--- a/node/config.json
+++ b/node/config.json
@@ -2,6 +2,7 @@
     "fields": {
         "block_dir": "blocks",
         "default_port": "0",
+        "default_web_port": "80",
         "max_connections": 50,
         "privatekey_name": "privatekey",
         "publickey_name": "publickey",
